--- a/restaurante_app/templates/inicio.html
+++ b/restaurante_app/templates/inicio.html
@@ -383,7 +383,7 @@
             <h5>Años de Experiencia</h5>
           </div>
           <div class="col-lg-3 col-md-6 mb-4">
-            <div class="stat-number">semana 4-12 fin de semana 4-2am</div>
+            <div class="stat-number">24/7</div>
             <h5>Disponible</h5>
           </div>
         </div>
