--- a/restaurante_app/templates/login.html
+++ b/restaurante_app/templates/login.html
@@ -57,7 +57,7 @@
             <option value="">Seleccione...</option>
             <option value="efectivo">💵 Efectivo</option>
             <option value="nequi">📱 Nequi</option>
-            <option value="daviplata">🏦 Bancolombia</option>
+            <option value="Bancolombia">🏦 Bancolombia</option>
           </select>
         </div>
 
