--- a/restaurante_app/templates/inicio.html
+++ b/restaurante_app/templates/inicio.html
@@ -29,7 +29,7 @@
       <div class="container">
         <a class="navbar-brand" href="#home">
           <i class="fas fa-utensils text-warning me-2"></i>
-          Salsas & Papas
+          Deli Combos Pradito
         </a>
         <button
           class="navbar-toggler"
