--- a/restaurante_app/templates/inicio.html
+++ b/restaurante_app/templates/inicio.html
@@ -68,8 +68,7 @@
         <div class="row align-items-center">
           <div class="col-lg-6 hero-content">
             <h1 class="display-4 fw-bold text-white mb-4">
-              Las Mejores <span class="text-warning">Salchipapas</span> de la
-              Ciudad
+              Las Mejores <span class="text-warning">Salchipapas</span> de Medellín
             </h1>
             <p class="lead text-white mb-5">
               Descubre el sabor auténtico con nuestras salchipapas artesanales.
@@ -180,7 +179,7 @@
           <div class="col-lg-6">
             <h2 class="display-5 fw-bold mb-4">Sobre Nosotros</h2>
             <p class="lead mb-4">
-              En Salsas & Papas, nos especializamos en crear las mejores
+              En Deli Combos Pradito, nos especializamos en crear las mejores
               salchipapas de la ciudad. Cada plato es preparado con ingredientes
               frescos y mucho amor.
             </p>
