--- a/restaurante_app/templates/inicio.html
+++ b/restaurante_app/templates/inicio.html
@@ -140,7 +140,7 @@
           <h5 class="card-title fw-bold">{{ p.nombre }}</h5>
           <p class="card-description">{{ p.descripcion }}</p>
           <p class="card-price visually-hidden">{{ p.precio }}</p>
-          <button class="btn add-to-cart-btn" onclick="enviarPedido(event)"><i class="fas fa-cart-plus me-2">Agregar al Carrito</i></button>>
+          <button class="btn add-to-cart-btn" onclick="enviarPedido(event)"><i class="fas fa-cart-plus me-2">Agregar al Carrito</i></button>
             
         </div>
       </div>
