seccion de quejas y sugerencias

--- a/restaurante_app/templates/confirmacion.html
+++ b/restaurante_app/templates/confirmacion.html
@@ -28,6 +28,11 @@
                   Gracias {{ usuario.nombre }}. Tu pedido se ha registrado
                   correctamente.
                 </p>
+                <br />
+                <p class="text-muted">
+                  Recuerda {{ usuario.nombre }} para confirmar tu pedido debes
+                  enviar el mensaje de whatsApp
+                </p>
               </div>
 
               <div class="card mb-4">
