--- a/restaurante_app/templates/login.html
+++ b/restaurante_app/templates/login.html
@@ -3,12 +3,12 @@
   rel="stylesheet"
 />
 
-<div class="d-flex align-items-center justify-content-center vh-100 bg-light">
+<div class="d-flex align-items-center justify-content-center bg-light">
   <div
-    class="card shadow-lg border-0 rounded-4"
+    class="card shadow-lg mb-lg-5 mt-lg-5 py-5 g-5 border-0 rounded-4"
     style="max-width: 450px; width: 100%"
   >
-    <div class="card-body p-5">
+    <div class="card-body">
       <h3 class="text-center mb-4 fw-bold text-success">
         <i class="fas fa-shopping-basket me-2"></i> Confirmar Pedido
       </h3>
@@ -77,7 +77,7 @@
 
         <input type="hidden" id="carrito" name="carrito" required />
 
-        <div id="resumen-pedido" class="mb-4 p-3 bg-light rounded">
+        <div id="resumen-pedido" class="mb-lg-5 p-3 bg-light rounded">
           <h6 class="fw-bold mb-3">Resumen del pedido:</h6>
           <div id="items-carrito"></div>
           <hr />
