--- a/restaurante_app/templates/inicio.html
+++ b/restaurante_app/templates/inicio.html
@@ -57,6 +57,11 @@
               <a class="nav-link" href="#about">Nosotros</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="{% url 'resenas' %}"
+                >Quejas o sugerencias</a
+              >
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#contact">Contacto</a>
             </li>
             <li class="nav-item">
@@ -93,7 +98,7 @@
                     <a href="#menu" class="btn btn-custom btn-lg">
                       <i class="fas fa-utensils me-2"></i>Ver Menú
                     </a>
-                    <a href="#order" class="btn btn-outline-light btn-lg">
+                    <a href="#menu" class="btn btn-outline-light btn-lg">
                       <i class="fas fa-shopping-cart me-2"></i>Pedir Ahora
                     </a>
                   </div>
